fix guest name too long

--- a/style.css
+++ b/style.css
@@ -795,7 +795,7 @@ footer {
     .guest-name-overlay {
         font-size: 40px;
 
-        padding-left: 500px;
+        padding-left: 470px;
     }
 }
 
@@ -804,7 +804,7 @@ footer {
     .guest-name-overlay {
         font-size: 3.5vw;
         top: 76%;
-        padding-left: 44%;
+        padding-left: 42%;
     }
 }
 
